# llm-playground

./: Cargo.toml  README.md
models/phi-3-vision/: README.md  phi3v.py  requirements.txt
python/: main.py  requirements.txt
src/: candle.rs  gguf.rs  main.rs  mistral.rs  ort.rs
src/phi3v/: image_process.rs  mod.rs  process.rs  text_process.rs
src/qllava/: clip.rs  mod.rs  qllama.rs  text_model.rs  vision_model.rs
src/quantized_llava_phi_3/: clip.rs  llava.rs  mod.rs  quantized_llama.rs  text_model.rs  vision_model.rs
