[package]
name = "llm-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
candle-core = { version = "0.7.2" }
candle-nn = { version = "0.7.2" }
candle-transformers = { version = "0.7.2" }
image = "0.25"
show-image = { version = "0.14", features = ["image", "raqote"] }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = [
    "metal",
] }
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.5", features = [
    "fetch-models",
    "coreml",
    # "directml"
] }
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
regex = "1.11.0"
tokenizers = "0.20.0"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tracing = "0.1"
base64 = "0.22.1"
