[package]
name = "llm-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
# candle-core = { version = "0.7.2", features = ["metal"] }
# candle-nn = { version = "0.7.2", features = ["metal"] }
# candle-transformers = { version = "0.7.2" }
# candle-examples = { version = "0.7.2" }
candle-core = { path = "../candle/candle-core", features = ["metal"] }
candle-nn = { path = "../candle/candle-nn", features = ["metal"] }
candle-transformers = { path = "../candle/candle-transformers" }
candle-examples = { path = "../candle/candle-examples" }
image = "0.25"
show-image = { version = "0.14", features = ["image", "raqote"] }
# mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = [
#     "metal",
# ] }
mistralrs = { path = "../mistral.rs/mistralrs", features = ["metal"] }
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.5", features = [
    "fetch-models",
    "coreml",
    # "directml"
] }
reqwest = "0.12.7"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.128"
regex = "1.11.0"
tokenizers = { version = "0.19.1", default-features = false, features = [
    "onig",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
tracing = "0.1"
base64 = "0.22.1"
either = "1.13.0"
indexmap = "2.6.0"
clap = "4.5.20"
hf-hub = "0.3.2"
